--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,31 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+body .url {
+    visibility: hidden;
+    display: block;
+    background-color: rgb(33 29 48);
+    color: rgb(132, 123, 168);
+    padding: .5rem 1.5rem;
+    border-radius: .5rem;
+    margin-top: 3rem;
+    margin: 3rem 1rem 0 1rem;
+}
+
+body.loaded .url {
+    visibility: visible;
+}
+
+.url a, .url a:visited, .url a:active {
+    color: rgb(228, 142, 243);
+    text-decoration: none;
+}
+
+.url a:hover {
+    text-decoration: underline;
 }
 
 .loader {
